--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "this is the backend code for the chatting application",
-  "main": "index.js",
+  "main": "src/index.js",
   "type": "module",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
   "scripts": {
-    "start": "nodemon ./src/index.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
+    "build": "echo 'No build step required'"
   },
   "keywords": [
     "jaydeep",
@@ -31,8 +37,10 @@
     "mongoose-aggregate-paginate-v2": "^1.1.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^7.0.10",
-    "nodemon": "^3.1.9",
-    "prettier": "^3.4.2",
     "socket.io": "^4.8.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9",
+    "prettier": "^3.4.2"
   }
 }
