--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "type": "module",
   "engines": {
-    "node": ">=18.0.0",
+    "node": "18.x",
     "npm": ">=8.0.0"
   },
   "scripts": {
@@ -42,5 +42,8 @@
   "devDependencies": {
     "nodemon": "^3.1.9",
     "prettier": "^3.4.2"
+  },
+  "overrides": {
+    "buffer-equal-constant-time": "1.0.1"
   }
 }
