--- a/render.yaml
+++ b/render.yaml
@@ -7,12 +7,15 @@ services:
     env: node
     region: oregon # or your preferred region
     plan: free
-    buildCommand: npm install
+    runtime: node
+    buildCommand: npm ci --legacy-peer-deps
     startCommand: npm start
     envVars:
       - key: NODE_ENV
         value: production
       - key: PORT
         generateValue: true
+      - key: NODE_OPTIONS
+        value: "--max-old-space-size=1024"
     autoDeploy: true
     healthCheckPath: /health
